test: 补充并完善全模块单元测试，覆盖率大幅提升
- 优化 Surefire 插件配置支持单测运行
- 添加和完善 lamp-public、lamp-system、lamp-base、lamp-oauth、lamp-gateway、lamp-generator、lamp-support 下的单元测试
- 修复代码逻辑缺陷 (Dict 重复键、SQL 安全拦截、树形结构 parentId 计算)
- 重构旧手工测试为 JUnit 5 规范测试类